<resources>
    <string name="app_name">TrekTopia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom nav bar   -->
    <string name="nav_title_home">Home</string>
    <string name="nav_title_history">History</string>
    <string name="nav_title_rank">Rank</string>
    <string name="nav_title_profile">Profile</string>
    <string name="title_activity_record">RecordActivity</string>

    <!-- EditText Error   -->
    <string name="err_required">Required</string>
    <string name="err_invalid_email">Invalid email</string>
    <string name="err_invalid_pass_1">Minimum 8 characters</string>
    <string name="err_invalid_pass_2">Password should not contain spaces</string>

    <!-- Toast   -->
    <string name="signin_failed">Failed to sign in, please try again</string>
    <string name="signup_failed">Failed to create an account, please try again</string>
    <string name="signin_succcess">You have successfully signed in</string>
    <string name="signup_succcess">Account created successfully, please sign in</string>
    <string name="err_api_problem">Failed to update data</string>

    <!-- Login and Register Page -->
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="to_signup">Sign Up New Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="to_signin">Sign In to Account</string>

    <!-- Home page   -->
    <string name="claim">Claim</string>
    <string name="progress">%.1f/%.1f</string>
    <string name="daily_missions">Daily Missions</string>
    <string name="point">%s Point</string>
    <string name="countdown">%d Hours</string>
    <string name="greeting">Hello! %s</string>
    <string name="permssion_notif_denied">Notification Permission Denied</string>
    <!--  Streak  -->
    <string name="current_streak">Total : %s Days</string>
    <string name="longest_streak">Your record : %s Days</string>

    <!-- History Page  -->
    <string name="steps">Steps</string>
    <string name="step_count">%sK</string>
    <string name="km">Km</string>
    <string name="km_h">Km/h</string>
    <string name="empty_activity">No Activity yet\n Stay fit by walking everyday!</string>

    <!-- Record Page -->
    <string name="live_steps">Steps (X100)</string>
    <string name="kilometer">Kilometer</string>
    <string name="timer_placeholder">00 : 00 : 00</string>
    <string name="live_info_placeholder">0.0</string>

    <!-- Recap   -->
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="start_stop_format">%s - %s</string>

    <!-- Leaderboard   -->
    <string name="leaderboard">Leaderboard</string>

    <!--  Profile  -->
    <string name="logout">Logout</string>
    <string name="see_more">See more</string>
    <string name="achievements">Achievements</string>
    <string name="chooser">Choose Image</string>
    <string name="gallery_failed">Failed to open gallery</string>
    <string name="gallery_not_permitted">Permission for gallery not granted</string>

    <!-- Dialog   -->
    <string name="dialog_loading_login">Logging in\nPlease wait…</string>
    <string name="dialog_loading_register">Registering new account\nPlease wait…</string>

    <string name="dialog_loading_activity">Awesome!\nSaving your activity…</string>
    <string name="dialog_loading_claim">Good job!\nClaiming your reward…</string>
    <string name="dialog_loading_update">Okay!\nUpdating your data…</string>
    <string name="dialog_loading_update_profile">Okay!\nUpdating your profile…</string>

    <string name="dialog_success_claim">Point successfully claimed!\nAdded %s points</string>
    <string name="dialog_success_update">Update success!\nYour username is updated</string>
    <string name="dialog_success_update_profile">Update success!\nYour picture is updated</string>

    <string name="dialog_fail_activity">Failed to save activity…\nPlease try again</string>
    <string name="dialog_fail_claim">Failed to claim points…\nPlease try again</string>
    <string name="dialog_fail_update">Failed to update your data…\nPlease try again</string>
    <string name="dialog_fail_update_profile">Failed to update your profile…\nPlease try again</string>

    <!--  Other  -->
    <string name="page_failed_load">Failed to load page, try again</string>

</resources>